fix(api): show properly formatted json on HTTP error codes
from https://tsoa-community.github.io/docs/error-handling.html
