# src/genericTypes.ts
@@ -1,0 +1,9 @@
+export interface ValidateErrorJson {
+    message: 'Validation failed';
+    details: { [name: string]: unknown };
+}
+
+export interface BadRequestJson {
+    message: 'Bad Request';
+    details?: string;
+}
